bk_ida/gobmkida/c0/hashtable_partially_clear
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/hashtable_partially_clear/src/engine/cache.c:816:19: error: use of undeclared identifier 'off_4E4370'
memcpy( routines, off_4E4370, sizeof( routines)); 
                  ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/hashtable_partially_clear/src/obj/1/cache.o] Error 1
